Update userController and userRoutes
